force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>One row per integration sync run (initially the Constant Contact inbound poller). Records status, counts, and error detail so a System Administrator can monitor and troubleshoot syncs. JSI-107 / Jason Ott.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>IL-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>