force-app/main/default/objects/Integration_Log__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>Which integration produced this log row (e.g., "Constant Contact"). Text so new integrations can reuse this object. JSI-107 / Jason Ott.</description>
    <label>Integration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>