force-app/main/default/objects/Integration_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Run summary and/or error detail (stack traces, CC API error messages) for admin troubleshooting. JSI-107 / Jason Ott.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>