force-app/main/default/objects/Integration_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Which sync operation this run performed. JSI-107 / Jason Ott.</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-Out Sync</fullName>
            </value>
            <value>
                <fullName>Bounce Sync</fullName>
            </value>
            <value>
                <fullName>Engagement Sync</fullName>
            </value>
            <value>
                <fullName>Audience Push</fullName>
            </value>
            <value>
                <fullName>Preference Sync</fullName>
            </value>
            <value>
                <fullName>Full Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>