force-app/main/default/objects/Integration_Log__c/fields/Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>Records_Failed__c</fullName>
    <description>Number of records that failed during the run (drives the "Partial" status and admin alerts). JSI-107 / Jason Ott.</description>
    <label>Records Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>