force-app/main/default/objects/Integration_Log__c/fields/Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Records_Processed__c</fullName>
    <description>Number of records the run examined. JSI-107 / Jason Ott.</description>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>