force-app/main/default/objects/Integration_Log__c/fields/Records_Updated__c.field-meta.xml
<CustomField>
    <fullName>Records_Updated__c</fullName>
    <description>Number of Salesforce records the run created or updated. JSI-107 / Jason Ott.</description>
    <label>Records Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>