force-app/main/default/objects/Integration_Log__c/fields/Run_End__c.field-meta.xml
<CustomField>
    <fullName>Run_End__c</fullName>
    <description>When this sync run finished. JSI-107 / Jason Ott.</description>
    <label>Run End</label>
    <type>DateTime</type>
</CustomField>