force-app/main/default/objects/Integration_Log__c/fields/Run_Start__c.field-meta.xml
<CustomField>
    <fullName>Run_Start__c</fullName>
    <description>When this sync run started. Also serves as the source for the incremental "last successful run" cursor. JSI-107 / Jason Ott.</description>
    <label>Run Start</label>
    <type>DateTime</type>
</CustomField>